--- a/css/game.css
+++ b/css/game.css
@@ -2,13 +2,19 @@
     width: 350px;
     display: block;
     margin: 0 auto;
-    margin-top: 10vh;
 }
 
 body {
     background: #1E1E1E;
     color: #FFFFFF;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    width: 100%;
+    height: 100vh;
+}
+.main-container{
+    width: 100%;
+    height: 100%;
+    padding-top: 20px;
 }
 
 .info {
